fix overlapping to other select (SOA)

--- a/css/style.css
+++ b/css/style.css
@@ -7706,7 +7706,7 @@ fieldset[disabled] .form-control {
           color: #800;
            font-weight: bolder;
             font-size: 14px;
-            margin: 3px 0 1px 6px; }
+            margin: 3px 0 1px 6px; 
   
         }
 
